# ntsoft_filesOrg

./: .gitignore  INSTALL.md  README.md  check_dependencies.py  pyproject.toml  requirements.txt  run_once.bat  run_watch.bat  run_web.bat  setup_env.bat
app/: __init__.py  config.py  logger.py  main.py
app/data/: aliases.json  document_keywords.json
app/models/: __init__.py  document.py  enums.py  result.py
app/services/: __init__.py  classifier_service.py  cnpj_service.py  document_finance_parser.py  filter_service.py  ocr_service.py  organizer_service.py  payment_index_service.py  pdf_service.py  processed_registry_service.py  rar_service.py  zip_service.py  (+4 more)
reports/: report_20260313-082937.json  report_20260313-082937.txt  report_20260313-084726.txt  report_20260313-085047.txt  report_20260313-090353.json  report_20260313-092849.txt  report_20260313-093208.json  report_20260313-093749.json  report_20260313-094126.txt  report_20260313-095817.json  report_20260313-095817.txt  report_20260313-095838.txt  report_20260313-095910.txt  report_20260313-100228.json  report_20260313-103216.json  report_20260313-103216.txt  report_20260313-104055.json  report_20260313-104055.txt  report_20260313-104541.json  report_20260314-175954.json  report_20260314-175954.txt
tests/: test_classifier.py  test_cnpj_service.py  test_document_finance_parser.py  test_filter_service.py  test_main_rar_flow.py  test_main_zip_flow.py  test_ocr_flow.py  test_path_utils.py  test_pdf_service.py  test_scanner_service.py  test_watcher_utils.py  test_whatsapp_ingestion_utils.py  test_zip_service.py
(+72 files in other folders)
