[project]
name = "ntsoft-orgfiles"
version = "0.1.0"
description = "Sistema local em Python para organizar automaticamente documentos financeiros de lojas a partir de PDFs e ZIPs."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "NTSoft", email = "dev@example.com" }
]
dependencies = [
  "PyMuPDF>=1.24.0",
  "pydantic>=2.0.0",
  "watchdog>=4.0.0",
  "rarfile>=4.2",
  "pdf2image>=1.17.0",
  "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "app",
]

